# spreadsafe

./: .gitignore  README.md  pyproject.toml
plans/: 001-sanitize-custom-document-properties.md  002-redact-external-workbook-formulas.md  003-wire-presidio-name-detection.md  004-validate-config-list-types.md  005-prune-unused-runtime-dependencies.md  006-redact-validation-issue-values.md  007-harden-xlsx-formula-policy.md  008-validate-sanitize-command-output.md  009-deduplicate-cli-package-flow.md  010-remove-unused-click-dependency.md  README.md
src/spreadsafe/: __init__.py  cli.py  detectors.py  mapping.py  reporter.py  sanitizer.py  scanner.py  validators.py
tests/: test_detectors.py  test_mapping.py  test_package_integration.py  test_reporter.py  test_scanner.py
