[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spreadsafe"
version = "0.1.0"
description = "Local spreadsheet sanitizer for Codex-safe Excel and CSV handoff packages."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "openpyxl>=3.1",
  "presidio-analyzer>=2.2",
  "pyyaml>=6",
]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
spreadsafe = "spreadsafe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spreadsafe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["openpyxl.*", "yaml"]
ignore_missing_imports = true
